<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:padding="7sp"
	android:layout_height="fill_parent" android:layout_width="fill_parent">
   
 <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
 	android:textStyle="bold" android:textSize="22sp"
 	android:text="@string/title" android:paddingBottom="14sp"/>
 <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
 	android:text="@string/carto_2of2" android:textSize="16sp" android:paddingBottom="21sp"/>
   
 <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="center_vertical" android:paddingBottom="14sp">
 	<TextView android:text="@string/direction" android:layout_width="fill_parent" android:textSize="16sp" android:gravity="center_vertical" android:layout_height="wrap_content" android:layout_weight="2.0"/>
 	<Spinner android:id="@+id/direction" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="1.0"/>
 </LinearLayout>
 <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="center_vertical">
 	<TextView android:text="@string/departure" android:layout_width="fill_parent" android:textSize="16sp" android:gravity="center_vertical" android:layout_height="wrap_content" android:layout_weight="2.0"/>
 	<Spinner android:id="@+id/departure" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="1.0"/>
 </LinearLayout>
 <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="center_vertical">
 	<TextView android:text="@string/arrival" android:layout_width="fill_parent" android:textSize="16sp" android:gravity="center_vertical" android:layout_height="wrap_content" android:layout_weight="2.0"/>
 	<Spinner android:id="@+id/arrival" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="1.0"/>
 </LinearLayout>
 
 <LinearLayout android:orientation="horizontal"  android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="1.0"></LinearLayout>
 
   
 <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="fill_parent">
  <Button
  	android:text="@string/btn_previous" android:id="@+id/btn_2of2_previous"
  	android:textSize="16sp"
  	android:layout_width="fill_parent" android:layout_height="70sp" android:layout_weight="1.0"
  	/>
  <Button
  	android:text="@string/btn_go" android:id="@+id/btn_2of2_go"
  	android:textSize="16sp"	android:textStyle="bold" 
  	android:layout_width="fill_parent" android:layout_height="70sp" android:layout_weight="1.0"
  	/>
 </LinearLayout>
   
</LinearLayout>
